Fix z-index issue

--- a/app/styles/layout/_page-header.scss
+++ b/app/styles/layout/_page-header.scss
@@ -11,7 +11,7 @@
   right: 0;
   left: 0;
   height: 60px;
-  z-index: 500;
+  z-index: 50;
 
   @media (min-width: $breakpoint-desktop) {
     padding: $desktop-gutter;
